--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
       <input type="number" name="inputNumber" id="inputNumber" placeholder="0">
       <p id="txtSelect">Select Tip %</p>
       <div class="porcentagem">
-          <input type="button" value="5%" id="_5">
-          <input type="button" value="10%" id="_10">
-          <input type="button" value="15%" id="_15">
-          <input type="button" value="25%" id="_25">
-          <input type="button" value="50%" id="_50">
+          <input type="button" value="5%" id="_5" class="botao" >
+          <input type="button" value="10%" id="_10" class="botao">
+          <input type="button" value="15%" id="_15" class="botao">
+          <input type="button" value="25%" id="_25" class="botao">
+          <input type="button" value="50%" id="_50" class="botao">
           <input type="number" placeholder="Custom" id="Custom" class="custom">
       </div>
       <p id="txtPeople">Number of People</p>
